# rental-backend/src/routes/booking.routes.ts
@@ -6,9 +6,9 @@ import BookingController from "../controllers/booking.controller";
 
 const router = Router();
 
-router.post("/book", isAuthenticated , BookingController.bookProperty);
+router.post("/create", isAuthenticated , BookingController.bookProperty);
 router.get("/:id", isAuthenticated, BookingController.getBookingById);
-router.get("/:renterId", isAuthenticated, BookingController.getBookingsByRenter);
+router.get("/renter/:renterId", isAuthenticated, BookingController.getBookingsByRenter);
 router.patch("/:id",isAuthenticated, BookingController.updateBookingStatus)
 
 const bookingRouter = router;
